# ProjetoP2

./: CMakeLists.txt
Compress/: main.c
Compress/inc/: binary.h  compress.h  decompress.h  huff_tree.h  node.h  priority_queue.h
Compress/src/: binary.c  compress.c  decompress.c  huff_tree.c  node.c  priority_queue.c  src.rar
Contagem&Plotagem/: comandos.txt  heap.c  pqueue.c
Seminario/: Slides Red-Black Tree.pptx
